--- a/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -1,1 +1,32 @@
-<p>recipes-detail works!</p>
+<div class="row">
+    <div class="col-12">
+        <img src="" alt="" class="img-fluid">
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <h1>Recipe Name</h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="btn-group">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Manage Recipe <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">To Shopping List</a></li>
+                <li><a class="dropdown-item" href="#">Edit Recipe</a></li>
+                <li><a class="dropdown-item" href="#">Delete Recipe</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <p>Description</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <p>Ingredients</p>
+    </div>
+</div>
