--- a/my-app/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/my-app/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,1 +1,22 @@
-<p>recipes-list works!</p>
+<div class="row">
+    <div class="col-12">
+        <button class="btn btn-success">New Recipe</button>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-12">
+        <div *ngFor="let recipe of recipes" class="list-group mt-1">
+            <div class="list-group-item clearfix">
+                <div class="float-start">
+                    <h4 class="">{{recipe.name}}</h4>
+                    <p class="">{{recipe.description}}</p>
+                </div>
+                <span class="float-end">
+                    <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-fluid" style="max-height: 50px;">
+                </span>
+            </div>
+        </div>
+        <app-recipes-item></app-recipes-item>
+    </div>
+</div>
