--- a/my-app/src/app/shopping-list/shopping-list.component.html
+++ b/my-app/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,13 @@
-<p>shopping-list works!</p>
+<div class="row">
+    <div class="col-xs-10">
+        <app-shopping-edit></app-shopping-edit>
+        <hr>
+        <ul class="list-group">
+            <a href="#" class="list-group-item" style="cursor: pointer;"
+            *ngFor="let ingridient of ingredients"
+            >
+            {{ingridient.name}} ({{ingridient.amount}})
+            </a>
+        </ul>
+    </div>
+</div>
