--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Recipes</a>
+                    <a href="#" class="nav-link" (click)="onSelect('recipe')">Recipes</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Shopping List</a>
+                    <a href="#" class="nav-link" (click)="onSelect('shopping-list')">Shopping List</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
