--- a/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-12">
-        <img src="" alt="" class="img-fluid">
+        <img [src]="recipe.imagePath" alt="{{recipe.name}}" style="max-height: 50px;" class="img-fluid">
     </div>
 </div>
 <div class="row">
     <div class="col-12">
-        <h1>Recipe Name</h1>
+        <h1>{{recipe.name}}</h1>
     </div>
 </div>
 <div class="row">
@@ -22,7 +22,7 @@
 </div>
 <div class="row">
     <div class="col-12">
-        <p>Description</p>
+        <p>{{recipe.description}}</p>
     </div>
 </div>
 <div class="row">
