--- a/my-app/src/app/recipes/recipes-list/recipes-item/recipes-item.component.html
+++ b/my-app/src/app/recipes/recipes-list/recipes-item/recipes-item.component.html
@@ -1,1 +1,11 @@
-<p>recipes-item works!</p>
+<a href="#" class="list-group mt-1" (click)="onSelected()">
+    <div class="list-group-item clearfix">
+        <div class="float-start">
+            <h4 class="">{{recipe.name}}</h4>
+            <p class="">{{recipe.description}}</p>
+        </div>
+        <span class="float-end">
+            <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-fluid" style="max-height: 50px;">
+        </span>
+    </div>
+</a>
