--- a/my-app/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/my-app/src/app/recipes/recipes-list/recipes-list.component.html
@@ -6,17 +6,9 @@
 <hr>
 <div class="row">
     <div class="col-12">
-        <div *ngFor="let recipe of recipes" class="list-group mt-1">
-            <div class="list-group-item clearfix">
-                <div class="float-start">
-                    <h4 class="">{{recipe.name}}</h4>
-                    <p class="">{{recipe.description}}</p>
-                </div>
-                <span class="float-end">
-                    <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-fluid" style="max-height: 50px;">
-                </span>
-            </div>
-        </div>
-        <app-recipes-item></app-recipes-item>
+        <app-recipes-item
+        *ngFor="let recipeEl of recipes"
+        [recipe]="recipeEl"
+        (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipes-item>
     </div>
 </div>
