--- a/my-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/my-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,16 +4,16 @@
             <div class="row">
                 <div class="col-md-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
+                    <input type="text" id="name" class="form-control" #nameInput>
                 </div>
                 <div class="col-md-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control">
+                    <input type="number" id="amount" class="form-control" #amountInput>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12">
-                    <button class="btn btn-success me-1 ms-0" type="submit">Add</button>
+                    <button class="btn btn-success me-1 ms-0" type="button" (click)="onAddItem()">Add</button>
                     <button class="btn btn-danger m-1" type="button">Delete</button>
                     <button class="btn btn-primary m-1" type="button">Clear</button>
                 </div>
