--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -14,11 +14,11 @@
                 </li>
             </ul>
             <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Manage <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#" class="dropdown-item">Save Data</a></li>
-                        <li><a href="#" class="dropdown-item">Fetch Data</a></li>
+                <li class="nav-item dropdown" dropdown>
+                    <a dropdownToggle href="#" class="nav-link dropdown-toggle">Manage <span class="caret"></span></a>
+                    <ul *dropdownMenu class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Save Data</a></li>
+                        <li><a class="dropdown-item" href="#">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
