--- a/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -9,10 +9,10 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-12">
-        <div class="btn-group">
-            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Manage Recipe <span class="caret"></span></button>
-            <ul class="dropdown-menu">
+    <div class="col-12" dropdown>
+        <div dropdownToggle class="btn-group">
+            <button type="button" class="btn btn-primary dropdown-toggle" aria-expanded="false">Manage Recipe <span class="caret"></span></button>
+            <ul *dropdownMenu class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">To Shopping List</a></li>
                 <li><a class="dropdown-item" href="#">Edit Recipe</a></li>
                 <li><a class="dropdown-item" href="#">Delete Recipe</a></li>
