Got rid of extra code. Replaced event emitters to services. Written services for each component in app. Added opportunity to add ingredients from recipe to shopping list

--- a/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -13,7 +13,7 @@
         <div dropdownToggle class="btn-group">
             <button type="button" class="btn btn-primary dropdown-toggle" aria-expanded="false">Manage Recipe <span class="caret"></span></button>
             <ul *dropdownMenu class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">To Shopping List</a></li>
+                <li><a class="dropdown-item" (click)="sendIngredientsToShoppingList(recipe.ingredients)">To Shopping List</a></li>
                 <li><a class="dropdown-item" href="#">Edit Recipe</a></li>
                 <li><a class="dropdown-item" href="#">Delete Recipe</a></li>
             </ul>
@@ -27,6 +27,10 @@
 </div>
 <div class="row">
     <div class="col-12">
-        <p>Ingredients</p>
+        <ul class="list-group">
+            <li class="list-group-item" *ngFor="let ingridient of recipe.ingredients">
+                {{ingridient.name}} - {{ingridient.amount}}
+            </li>
+        </ul>
     </div>
 </div>
