--- a/my-app/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/my-app/src/app/recipes/recipes-list/recipes-list.component.html
@@ -8,7 +8,6 @@
     <div class="col-12">
         <app-recipes-item
         *ngFor="let recipeEl of recipes"
-        [recipe]="recipeEl"
-        (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipes-item>
+        [recipe]="recipeEl"></app-recipes-item>
     </div>
 </div>
