Worked with routing in the application. Added new components

--- a/my-app/src/app/recipes/recipes-list/recipes-item/recipes-item.component.html
+++ b/my-app/src/app/recipes/recipes-list/recipes-item/recipes-item.component.html
@@ -1,5 +1,5 @@
-<a href="#" class="list-group mt-1" (click)="onSelected()">
-    <div class="list-group-item clearfix">
+<a style="cursor: pointer;" class="list-group mt-1" [routerLink]="[index]">
+    <div class="list-group-item clearfix" routerLinkActive="active">
         <div class="float-start">
             <h4 class="">{{recipe.name}}</h4>
             <p class="">{{recipe.description}}</p>
