--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -7,18 +7,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a href="#" class="nav-link" (click)="onSelect('recipe')">Recipes</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="/recipes">Recipes</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" (click)="onSelect('shopping-list')">Shopping List</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="/shopping-list">Shopping List</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown" dropdown>
-                    <a dropdownToggle href="#" class="nav-link dropdown-toggle">Manage <span class="caret"></span></a>
+                    <a dropdownToggle class="nav-link dropdown-toggle" style="cursor: pointer;">Manage <span class="caret"></span></a>
                     <ul *dropdownMenu class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Save Data</a></li>
-                        <li><a class="dropdown-item" href="#">Fetch Data</a></li>
+                        <li><a class="dropdown-item" style="cursor: pointer;">Save Data</a></li>
+                        <li><a class="dropdown-item" style="cursor: pointer;">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
