--- a/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -13,9 +13,9 @@
         <div dropdownToggle class="btn-group">
             <button type="button" class="btn btn-primary dropdown-toggle" aria-expanded="false">Manage Recipe <span class="caret"></span></button>
             <ul *dropdownMenu class="dropdown-menu">
-                <li><a class="dropdown-item" (click)="sendIngredientsToShoppingList(recipe.ingredients)">To Shopping List</a></li>
-                <li><a class="dropdown-item" href="#">Edit Recipe</a></li>
-                <li><a class="dropdown-item" href="#">Delete Recipe</a></li>
+                <li><a class="dropdown-item" style="cursor: pointer;" (click)="sendIngredientsToShoppingList(recipe.ingredients)">To Shopping List</a></li>
+                <li><a class="dropdown-item" style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
+                <li><a class="dropdown-item" style="cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
