--- a/my-app/src/app/shopping-list/shopping-list.component.html
+++ b/my-app/src/app/shopping-list/shopping-list.component.html
@@ -3,8 +3,9 @@
         <app-shopping-edit></app-shopping-edit>
         <hr>
         <ul class="list-group">
-            <a href="#" class="list-group-item" style="cursor: pointer;"
-            *ngFor="let ingridient of ingredients"
+            <a class="list-group-item" style="cursor: pointer;"
+            *ngFor="let ingridient of ingredients; let i = index"
+            (click)="onEditItem(i)"
             >
             {{ingridient.name}} ({{ingridient.amount}})
             </a>
