--- a/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/my-app/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -15,7 +15,7 @@
             <ul *dropdownMenu class="dropdown-menu">
                 <li><a class="dropdown-item" style="cursor: pointer;" (click)="sendIngredientsToShoppingList(recipe.ingredients)">To Shopping List</a></li>
                 <li><a class="dropdown-item" style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
-                <li><a class="dropdown-item" style="cursor: pointer;">Delete Recipe</a></li>
+                <li><a class="dropdown-item" style="cursor: pointer;" (click)="onDeleteRecipe()">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
