--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -17,8 +17,8 @@
                 <li class="nav-item dropdown" dropdown>
                     <a dropdownToggle class="nav-link dropdown-toggle" style="cursor: pointer;">Manage <span class="caret"></span></a>
                     <ul *dropdownMenu class="dropdown-menu">
-                        <li><a class="dropdown-item" style="cursor: pointer;">Save Data</a></li>
-                        <li><a class="dropdown-item" style="cursor: pointer;">Fetch Data</a></li>
+                        <li><a class="dropdown-item" style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
+                        <li><a class="dropdown-item" style="cursor: pointer;" (click)="onFetchData()">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
