--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -7,14 +7,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="active" routerLink="/recipes">Recipes</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="/recipes" *ngIf="isAuthenticated">Recipes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLinkActive="active" routerLink="/shopping-list">Shopping List</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" routerLink="/auth" *ngIf="!isAuthenticated">Authenticate</a>
+                </li>
             </ul>
             <ul class="navbar-nav">
-                <li class="nav-item dropdown" dropdown>
+                <li class="nav-item" *ngIf="isAuthenticated">
+                    <a style="cursor: pointer;" class="nav-link" (click)="onLogout()">Logout</a>
+                </li>
+                <li class="nav-item dropdown" dropdown *ngIf="isAuthenticated">
                     <a dropdownToggle class="nav-link dropdown-toggle" style="cursor: pointer;">Manage <span class="caret"></span></a>
                     <ul *dropdownMenu class="dropdown-menu">
                         <li><a class="dropdown-item" style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
