Worked with dynamic component by using ngIf and in the second approach by using it programmatically (ComponentFactoryResolver, Custom directive)

--- a/my-app/src/app/auth/auth.component.html
+++ b/my-app/src/app/auth/auth.component.html
@@ -1,8 +1,11 @@
+<ng-template appPlaceholder></ng-template>
 <div class="row">
     <div class="col-12 col-md-6 offset-md-3">
-        <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
+        <!-- <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
             <p>{{ errorMessage }}</p>
-        </div>
+        </div> -->
+        <!-- <app-alert [message]="errorMessage" *ngIf="errorMessage" (close)="onHandleError()"></app-alert> -->
+        
         <div *ngIf="isLoading" style="text-align: center;">
             <app-loading-spinner></app-loading-spinner>
         </div>
